настройка пом xml исправление тестов